lustre/lov/lov_object.c
@@ -1602,7 +1602,7 @@ out_lsm:
 }
 
 static int lov_object_getstripe(const struct lu_env *env, struct cl_object *obj,
-				struct lov_user_md __user *lum)
+				struct lov_user_md __user *lum, size_t size)
 {
 	struct lov_object	*lov = cl2lov(obj);
 	struct lov_stripe_md	*lsm;
@@ -1613,7 +1613,7 @@ static int lov_object_getstripe(const struct lu_env *env, struct cl_object *obj,
 	if (lsm == NULL)
 		RETURN(-ENODATA);
 
-	rc = lov_getstripe(env, cl2lov(obj), lsm, lum);
+	rc = lov_getstripe(env, cl2lov(obj), lsm, lum, size);
 	lov_lsm_put(lsm);
 	RETURN(rc);
 }
